--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,3 +12,45 @@ body {
     font-size: 16px;
     font-family: 'Raleway', sans-serif;
 }
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+ul {
+    list-style: none;
+}
+
+.container{
+    width: 90%;
+    margin: auto;
+}
+
+/* NAVIGATION */
+.nav-main {
+    font-size: 17px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 60px;
+    padding: 20px 0;
+}
+
+.nav-brand {
+    width: 50px;
+}
+
+.nav-main ul {
+    display: flex;
+}
+
+.nav-main ul li {
+    padding: 10px;
+}
+
+/* menu alineado a la izquierda */
+.nav-main ul.nav-menu {
+    flex: 1;
+    margin-left: 20px;
+}
